--- a/color.html
+++ b/color.html
@@ -34,7 +34,8 @@
         <a class="nav-link" href="tel:+918939700800"><i class="bi bi-telephone-fill"></i><b> +91 89397 00800 </b></a> 
       </div>
       <div class="col-3 bg mt-1 ml-5">
-        <a class="nav-link" href="mailto:vscolourbricks@gmail.com"> <i class="bi bi-envelope-open-fill"></i><b>  vscolourbricks@gmail.com</b></a>
+        <a class="nav-link" href="mail
+        to:vscolourbricks@gmail.com"> <i class="bi bi-envelope-open-fill"></i><b>  vscolourbricks@gmail.com</b></a>
       </div>
       <div class="col-5 bg">
         <a class="nav-link" href="tel:+917339333614" style="justify-content: center;"><i class="bi bi-geo-alt-fill"></i><b style="justify-content: center;">15B, Gangai Amman Kovil Street, Vadapalani, Chennai-600 026</b></a>
