--- a/sastra.html
+++ b/sastra.html
@@ -11,6 +11,33 @@
     .bg1{
         color: darkblue;
     }
+    .bg2{
+        background-color: darkblue;
+        color: white;
+    }
+    .con{
+      width: 1100px;
+      max-width: 100%;
+      margin: 0 auto;
+    }
+    .ro{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    .card{
+      flex: 1 1 21rem;
+      margin: 10px 20px;  
+    }
+    footer{
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      line-height: 1.5;
+      align-items: center;
+
+    }
+   
   </style>
   <body>
   <br>
@@ -115,6 +142,73 @@
       </div>
     </div>
   </nav>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  <footer>
+
+    <div class="container con">
+      <div class="row ro">
+        <div class="card">
+          <h4><b>CONTACT</b></h4>
+          <P><i class="bi bi-house-fill"></i> SASTRA DEEMED UNIVERSITY
+            Tirumalaisamudram
+            Thanjavur - 613401
+            Tamilnadu, India</P>
+          <P><i class="bi bi-telephone-fill"></i>+91 4362 264101 - 108<br>
+            +91 4362 350001 (20 lines)</P>
+          <p><i class="bi bi-envelope-fill"></i> admissions@sastra.edu</p>
+        </div>
+        <div class="card">
+          <h4><b>VISIT</b></h4>
+          
+        </div>
+        <div class="card">
+        <h4>QUICK LINKS</h4>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+        </div>
+        <div class="card">
+          <h4>USEFUL-LINKS</h4>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          <a href="https://scholarships.gov.in/"><i class="bi bi-arrow-right-short"></i>National scholarship portal</a>
+          </div>
+      </div>
+    </div>
+
+</footer>
+<div class="conatainer-fluid">
+  <div class="row">
+    <div class="col text-center bg2 pt-3">
+      <p>&copy; SASTRA DEEMED UNIVERSITY, All Rights Reserved. 2024</p>
+    </div>
+  </div>    
+</div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
