--- a/olir/index.html
+++ b/olir/index.html
@@ -264,11 +264,49 @@
 <br>
 <br>
 <br>
-<div class="conatainer-fluid bt">
-<h3>Get in touch with us</h3>
-<h1 class="text-center"><b>To light up your business goals digitally!</b></h1>
+
+
+
+<div class="container-fluid" style="background-color: #3D3D3D; padding: 80px;">
+  <h2 style="color: white; text-align: center;"><b>Let us know what you're looking for?</b></h2>
+  <br>
+  <br>
+<form class="need-validation">
+  <div class="form-group mb-4" >
+    <input type="text" class="form-control form-control-lg" id="exampleInputname1" placeholder="Name" required>
+    <div class="invalid-feedback">
+      The field is required.
+    </div>
+  </div>
+  <div class="form-group mb-4">
+    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
+  </div>
+  <div class="form-group mb-4">
+    <input type="tel" class="form-control form-control-lg" id="exampleInputphone1" placeholder="Phone">
+  </div>
+  
+  <select class="form-select form-select-lg mb-4" aria-label="Large select example">
+    <option selected>Selece to design</option>
+    <option value="1">Grapic design</option>
+    <option value="2">Web design</option>
+    <option value="3">UI/UX design</option>
+  </select>
+  
+  <div class="form-group mb-4">
+    <input type="text" class="form-control form-control-lg" id="exampleInputcompanyname1" placeholder="Companyname">
+  </div>
+  <div class="mb-4">
+    <textarea class="form-control form-control-lg" id="exampleFormControlTextarea1" rows="5" placeholder="Tell us little about your project"></textarea>
+  </div>
+ 
+  <button type="submit" class="btn" style="background-color: #E89C22;">Submit</button>
+</form>
 </div>
 
+<div class="conatainer-fluid bt">
+  <h3>Get in touch with us</h3>
+  <h1 class="text-center"><b>To light up your business goals digitally!</b></h1>
+  </div>
 <!------footer strarts here-->
 <div class="container-fluid bg-dark">
   <footer class="pt-3 pb-3">
