--- a/olir/contact-us.html
+++ b/olir/contact-us.html
@@ -94,13 +94,15 @@
         <div class="col">
             <h5><b>Phone Us</b></h5>
             <br>
-            <p>+91 81480 31248</p>
-            <p>+91 75503 73339</p>
+            <a class="nav-link" href="tel:+918148031248">+91 81480 31248</a>
+            <a class="nav-link" href="tel:+917550373339">+91 75503 73339</a>
         </div>
         <div class="col">
             <h5><b>Message Us</b></h5>
             <br>
-            <p></p>
+            <a  class="nav-link" href="mailto:hello@olirdesigns.com">hello@olirdesigns.com </a>
+            <a  class="nav-link" href="mailto:olirdesigns@gmail.com">olirdesigns@gmail.com </a>
+
         </div>
        </div>
     </div>
