--- a/olir/career.html
+++ b/olir/career.html
@@ -125,7 +125,7 @@
          </div> 
         </div>
 
-
+        <!--form-->
         <div class="container-fluid" style="background-color: #F1F6F9; padding: 80px;">
             <h2 style=" text-align: center;"><b>Send Your Resume</b></h2>
             <h3 class="text-center">Explore Career Opportunities</h4>
@@ -142,10 +142,10 @@
               <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email">
             </div>
             <div class="form-group mb-4">
-              <input type="tel" class="form-control form-control-lg" id="exampleInputaddress1" placeholder="Addressline1">
+              <input type="text" class="form-control form-control-lg" id="exampleInputaddress1" placeholder="Addressline1">
             </div>
             <div class="form-group mb-4">
-                <input type="tel" class="form-control form-control-lg" id="exampleInputaddress2" placeholder="Addressline2">
+                <input type="text" class="form-control form-control-lg" id="exampleInputaddress2" placeholder="Addressline2">
               </div>
               <div class="form-group mb-4">
                 <input type="text" class="form-control form-control-lg" id="exampleInputcity1" placeholder="City*">
@@ -154,7 +154,7 @@
                 <input type="text" class="form-control form-control-lg" id="exampleInputstate1" placeholder="State*">
               </div>
               <div class="form-group mb-4">
-                <input type="text" class="form-control form-control-lg" id="exampleInputpostal1" placeholder="Postalzip*">
+                <input type="number" class="form-control form-control-lg" id="exampleInputpostal1" placeholder="Postalzip*">
               </div>
               <div class="form-group mb-4">
                 <input type="tel" class="form-control form-control-lg" id="exampleInputphone1" placeholder="Phone">
@@ -169,7 +169,7 @@
               <div class="form-check mb-4">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
                 <label class="form-check-label" for="flexRadioDefault2">
-                  Inetrnship
+                  Internship
                 </label>
               </div>
             <select class="form-select form-select-lg mb-4" aria-label="Large select example">
