--- a/vilvah/sol-home.html
+++ b/vilvah/sol-home.html
@@ -78,14 +78,13 @@
   
     </div>
   </nav>
-  <br>
   <div class="container-fluid ">
     <div class="row pb-5">
         <div class="card" style="border-radius: 0%;">
           <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSL_qexNUK4AbNgPpCXKW3nqrG_2PXakUJ6y2rx4_aOUInjSTXs" width="100%" height="400px">
         </div>
         <div class="col">
-            <div class="card" style="width: 50%; height: 400px; opacity: 0.8; margin-top: -400px;">
+            <div class="card" style="width: 50%; height: 402px; opacity: 0.8; margin-top: -402px; border-radius: 0%;">
                 <h1 style="padding-top: 230px; padding-left: 50px; color: #144FA0; font-size: 50px;"><b>Home Automation</b></h1>
                 <p style="padding-left: 50px; font-size: 20px;">Home</p>
             </div>
