--- a/olir/graphic-designing.html
+++ b/olir/graphic-designing.html
@@ -32,6 +32,26 @@
     h3{
       text-align: center;
     }
+    .bg{
+      background-color: #F9F3F2;
+    }
+    .accordion-title > button:before {
+    float: right !important;
+    font-family: FontAwesome;
+    content:"\f0d7";
+    padding-right: 5px;
+    color: #F8AD42;
+}
+.accordion-title > button.collapsed:before {
+    float: right !important;
+    content:"  \f067";
+}
+.accordion-title > button:hover,
+.accordion-title > button:active,
+.accordion-title > button:focus  {
+    text-decoration:none;
+}
+
 </style>
 <body>
  <!--header starts here-->
@@ -84,7 +104,7 @@
     </div>
   </nav>
   <br>
-  <div class="container mt-5">
+  <div class="container mt-5 mb-5">
     <h3>Our Services</h3>
     <h1 class="text-center pb-5 mb-5"><b>Graphic Designing</b></h1>
     <div class="row p-3 mb-5">
@@ -306,8 +326,200 @@
 </div>
 
 </div>
+<div class="container-fluid bg pb-5" style="padding: 60px 100px;">
+  <h2 class="text-center pt-4 pb-4"><b>FAQ</b></h2>
 
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+        <span><b>What is graphic design and what does it include ? </b></span>
+      </button>
+  </h4>
+  </div>
+  <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+    <div class="accordion-body">Graphic design is the process of visual communication and problem-solving through the use of typography, photography, and illustration. It encompasses various techniques and methods to create and combine words, symbols, and images to create visual representations of ideas and messages. It includes branding, typography, digital media design, advertising design, and packaging design, among others. Graphic designers use various tools and software, such as Adobe Illustrator and Photoshop, to create and manipulate visual elements.</div>
+  </div>
+</div>
+ <hr>
 
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+        <span><b> Where are the uses of graphic designs?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">
+        <ul>
+          <li><b>Advertising:</b> We create visual concepts for  print, television, and online ads  to communicate ideas that inspire, inform, or captivate consumers.</li>
+          <li><b>Branding and Identity:</b> We create visual identities for companies, products, and services. This includes creating logos, typography, color schemes, and other visual elements  that are used consistently across all branding materials.</li>      
+          <li><b>Digital Media:</b> We create designs for websites, mobile apps, and other digital media. They may also create graphics, animations, and videos to be used on social media, online ads, and other digital platforms.</li>  
+          <li><b>Packaging:</b> We the visual packaging for products, such as food, cosmetics, and consumer electronics. They work to make the packaging eye-catching and informative, while also ensuring it meets legal requirements.</li>
+        <li><b>Print:</b> We create designs for print materials such as brochures, posters, billboards, books, and magazines.</li>
+        <li><b>Signage and Environmental Design:</b> We create visual graphics for public spaces such as billboards, signs, and murals. They also design visual elements for exhibitions and events.</li>
+        <li><b>Television and Film:</b> We create the visual elements for title sequences, film posters, and other promotional materials.</li>   
+        <li><b>User Interface and User Experience design:</b> We use design principles and techniques to create the layout, navigation, and visual elements of websites, mobile apps, and other digital products. They also work to improve the user experience by making the products easy to use and understand.</li>     
+      </ul>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+      <span><b> What do we use to create these designs?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body ">We use hand-illustrated designs as well as computer-aided designs thanks to a wide range of software with nearly endless digital design tools. The availability of software like Adobe Illustrator and Photoshop.</div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsefour" aria-expanded="false" aria-controls="flush-collapsefour">
+        <span><b> What else do we accomplish as part of the work they produce for a client?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapsefour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Besides turning their client’s vision, brand image and value proposition into a graphic display, a designer will undertake many specialty tasks as part of a graphic design project. The specialty tasks include collaborating on the concept (usually with a team), attending meetings about the project, paying attention to what customers are clicking on, doing presentations that explain the various potential designs, revising designs, and preparing asset files for others on the team and for client use.</div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsefive" aria-expanded="false" aria-controls="flush-collapsefive">
+        <span><b> Why is branding important?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapsefive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body">Another common question is why graphic design and branding are so critical to their business. Even though brands like Coca-Cola have spent years making a strong case for branding, some businesses forget the importance when it comes to their own operations. Branding helps companies stand out and have an identity. It also gives consumers an easy way to remember company names, helping create easy retention and keep brands in the forefront of people’s minds—the benefits go on for days. The point here is that you can use this space to sell them to your audience to drum up business. </div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsesix" aria-expanded="false" aria-controls="flush-collapsesix">
+        <span><b> Can you help us to develop our brand?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapsesix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> Yes, absolutely! Olir Design Pvt. Ltd. is a full-service graphic design and digital marketing company with a wide range of professional services. We begin with a detailed questionnaire that helps us understand your company so we represent you clearly and effectively. Learn more about branding in a professional consultation.</div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed bg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
+        <span><b> What design services do you provide?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapseseven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> Olir Design Pvt. Ltd. offers a wide range of creative services to meet your need. This includes graphic design, digital, print, merchandise, and also original logos and complete web design.</div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed bg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseeight" aria-expanded="false" aria-controls="flush-collapseeight">
+        <span><b> What graphic design services do you provide?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapseeight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> From creative branding identity projects to custom graphic design and social media branding, Olir Design Pvt. Ltd. can do it all. We can work with you to develop a creative strategy for brand engagement and brand awareness, or create a one-off graphic design for use on a variety of elements.
+        <br>
+        <br>
+        <ul>
+          <li> Logos</li>
+          <li> Business cards</li>
+          <li> Advertisements</li>
+          <li> Brochures</li>
+          <li> Flyers</li>
+          <li> Posters</li>
+          <li> Menus</li>
+          <li> Booklets</li>
+          <li> Book covers</li>
+          <li> Banners</li>
+          <li> Banners</li>
+          <li> Trade show displays and much more.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsenine" aria-expanded="false" aria-controls="flush-collapsenine">
+        <span><b> Why should I choose Olir Design Pvt. Ltd. over some other firm to do my design work?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapsenine" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body "> I realize you have many options when choosing a graphic design provider, and thank you for the opportunity to present my solutions to you.</div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed bg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseten" aria-expanded="false" aria-controls="flush-collapseten">
+        <span><b> Why should you choose me over the competition?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapseten" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> 
+        <ul>
+          <li><b></b></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed bg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseeleven" aria-expanded="false" aria-controls="flush-collapseeleven">
+        <span><b> How do we send final projects?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapseeleven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> All you want to know is how your end products will be delivered. Sometimes, it’s a compatibility issue. We ensure that all project deliverables are handled and whether you can accommodate special requests or make substitutions as needed. Be clear here and take the time to explain all the available options, if there are any, and help people understand exactly what they’re getting by working with you. The design is great, but what is the end product and how will it be sent? This helps further explain the process and also ensures that people have the right software to access their designs once they arrive.</div>
+    </div>
+  </div>
+  <hr>
+  <div class="accordion-item">
+    <div class="accordion-header" role="tab" id="headingtwo">
+      <h4 class="accordion-title" id="headingOne">
+      <button class="accordion-button collapsed bg" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsetwelve" aria-expanded="false" aria-controls="flush-collapsetwelve">
+        <b> Can you create my Website too?</b></span> 
+      </button>
+    </h4>
+    </div>
+    <div id="flush-collapsetwelve" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+      <div class="accordion-body"> Yes, Olir Design Pvt. Ltd. is an all under one roof design firm capable of creating your logo and branding and using that branding in everything from Web sites to your business collateral.</div>
+    </div>
+  </div>
+ 
+</div>
+</div>
   <!------footer strarts here-->
 <div class="container-fluid bg-dark">
     <footer class="pt-3 pb-3">
