--- a/shreem/product.html
+++ b/shreem/product.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>grid lines</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!--bootstrap icon-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--fontawesome-->
     <script src="https://kit.fontawesome.com/4b527de4ca.js" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+     <!-- Bootstrap JS, Popper.js, and jQuery -->
+     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <style>
     .bg-bl{
@@ -29,6 +36,18 @@
         opacity: 0.5;
         font-size: 14px;
         color: gray;
+    }
+    .tbg{
+      color: black;
+      font-size: 18px;
+    }
+    .star{
+      color: gray;
+      cursor: pointer;
+      transition: color 0.3s;
+    }
+    .star:hover{
+      color: goldenrod;
     }
 </style>
 <!--header-->
@@ -137,6 +156,7 @@
     <div class="col">
         <button type="submit" class="btn" style="color: white; background-color: #A291B7; border-radius: 30px; width: 240px; height: 50px; font-size: 16px;"> + ADD TO CART</button>
     </div>
+    
 </div>
         <br>
         <br>
@@ -145,18 +165,158 @@
         <p><b>Share This Product </b> <a href="https://shreemsweetsandbakery.com/product/affable-nutella-cake/#"><i class="fa-brands fa-facebook-f icon" style="padding-left: 8px;"></i></a> <a href="https://shreemsweetsandbakery.com/product/affable-nutella-cake/#" style="padding-left: 8px;"><i class="fa-brands fa-twitter icon"></i></a> <a href="https://shreemsweetsandbakery.com/product/affable-nutella-cake/#" style="padding-left: 8px;"><i class="fa-brands fa-pinterest icon "></i></a> <a href="https://shreemsweetsandbakery.com/product/affable-nutella-cake/#" style="padding-left: 8px;"><i class="fa-brands fa-google-plus-g icon"></i></a> <a href="https://shreemsweetsandbakery.com/product/affable-nutella-cake/#" style="padding-left: 8px;"><i class="fa-brands fa-linkedin-in icon"></i></a> </p>
         </div>
     </div>
-    <ul class="nav nav-underline justify-content-center">
+    <!--tab header-->
+    <ul class="nav nav-underline justify-content-center" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#" >DESCRIPTION</a>
+          <a class="nav-link active tbg" id="tab-one" data-toggle="tab" href="#content-one" role="tab" aria-controls="content-one" aria-selected="true" >DESCRIPTION</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">ADDITONAL INFORMATION</a>
+          <a class="nav-link tbg" id="tab-two" data-toggle="tab" href="#content-two" role="tab" aria-controls="content-two" aria-selected="false" >ADDITONAL INFORMATION</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">REVIEWS</a>
+          <a class="nav-link tbg" id="tab-three" data-toggle="tab" href="#content-three" role="tab" aria-controls="content-three" aria-selected="false">REVIEWS</a>
         </li>
       </ul>
-  </div>
+      
+        <!-- Tab Content -->
+        <div class="tab-content pt-4" id="myTabContent" >
+            <div class="tab-pane fade show active" id="content-one" role="tabpanel" aria-labelledby="tab-one" style="opacity: 0.6;">
+              <div class="card" style="padding: 40px 20px;">
+              <p>Each one of our family members is different, but each one of them holds a special place in our hearts. So also is the assorted cookies from the house of shreem – each piece is different and unique in its own way, but each one of them is special!</p>
+              <p>There is something for everyone in this special box! Order today to celebrate the bond you share with your family and enjoy the cookies fellowship as all hands reach out for the cookies box at the same time!</p>
+              <p><b>Nutritional Facts*</b></p>
+              <ul>
+                <li>For a Serving Size of 4 pcs (34g)</li>
+                <li>Calories 170</li>
+                <li>Calories from Fat 72 (42.4%)</li>
+              </ul>
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Value Per Serving</th>
+                    <th scope="col">%Daily Values*</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td scope="row">Total Fat</td>
+                    <td>8g</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Saturated fat</td>
+                    <td>2g</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Cholesterol</td>
+                    <td>10mg</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Sodium</td>
+                    <td>150mg</td>
+                    <td>7%</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Carbohydrates</td>
+                    <td>22g</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Net carbs</td>
+                    <td>21g</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Fiber</td>
+                    <td>1g</td>
+                    <td>5%</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Glucose</td>
+                    <td>9g</td>
+                    <td>-</td>
+                  </tr>
+                  <tr>
+                    <td scope="row">Protein</td>
+                    <td>2g</td>
+                    <td>-</td>
+                  </tr>
+                </tbody>
+              </table>
+              <p>*Nutritional information values from internet sources for references.</p>
+            </div>
+            </div>
+            <div class="tab-pane fade" id="content-two" role="tabpanel" aria-labelledby="tab-two" style="opacity: 0.7;">
+              <div class="card" style="padding: 40px 20px;">
+              <table class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <td scope="row" style="font-size: 14px;">WEIGHT</td>
+                    <td><i>N/A</i></td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td scope="row" style="font-size: 14px;">CHOOSE VARIANTS</td>
+                    <td><i>250 g, 500 g</i></td>
+                  </tr>
+                  <tr>
+                    <td scope="row" style="font-size: 14px;">INGREDIENTS</td>
+                    <td><i>Baking Powder, Butter, Cocoa Powder, Egg, Flour, Icing Sugar</i></td>
+                  </tr>
+                  <tr>
+                    <td scope="row" style="font-size: 14px;">BEST BEFORE</td>
+                    <td><i>30 days from the date of packing (when stored in an airtight container)</i></td>
+                  </tr>
+                  <tr>
+                    <td scope="row" style="font-size: 14px;">MANUFACTURED BY</td>
+                    <td><i>Shreem Sweets and Bakery</i></td>
+                  </tr>
+                  </tbody>
+              </table>
+            </div>
+            </div>
+            <div class="tab-pane fade" id="content-three" role="tabpanel" aria-labelledby="tab-three">
+              <div class="card" style="padding: 40px 20px;">
+                <p>There are no reviews yet.</p>
+                <p style="font-size: 16px;"><b>BE THE FIRST TO REVIEW “ASSORTED COOKIES”</b></p>
+                <p>Your email address will not be published. Required fields are marked*</p>
+                <p>Your rating*</p>
+                <div class="d-flex mb-3">
+                  <i class="fa-regular fa-star star"></i>
+                  <i class="fa-regular fa-star star"></i>
+                  <i class="fa-regular fa-star star"></i>
+                  <i class="fa-regular fa-star star"></i>
+                  <i class="fa-regular fa-star star"></i>
+                </div>
+                <div class="mb-4">
+                  <label for="Textarea1">Your review*</label>
+                  <textarea class="form-control form-control-lg" id="Textarea1" rows="4" ></textarea>
+                </div>
+                <div class="form-group mb-4" style="width: 300px;">
+                  <label for="name1">Name*</label>
+                  <input type="text" class="form-control form-control-lg" id="name1">
+                </div>
+                <div class="form-group mb-4" style="width: 300px;">
+                  <label for="email1">Email*</label>
+                  <input type="email" class="form-control form-control-lg" id="email1" aria-describedby="emailHelp">
+                </div>
+                <div class="form-check mb-2 mr-sm-2">
+                  <input class="form-check-input" type="checkbox" id="inlineFormCheck">
+                  <label class="form-check-label" for="inlineFormCheck">
+                  </label>
+                  </div>
+                    <p style="opacity: 0.6;">Save my name, email, and website in this browser for the next time I comment.</p>
+                  <p style="font-size: 14px; opacity: 0.6; margin-top: 18px;">This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.</p>
+          <button type="submit" class="btn mt-4" style="color: white; background-color: black; border-radius: 5px; width: 120px; height: 50px;">Submit</button>
+            </div>    
+            </div>
+        </div>
+    </div>
+  
 
         <!--footer-->
         <div class="container-fluid">
