--- a/vilvah/career.html
+++ b/vilvah/career.html
@@ -76,19 +76,18 @@
     
       </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row pb-5">
-            <div class="card" style="border-radius: 0%;">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9u1Y5H3q9HigL7lyvtvWu1RkkrE6tCtXJLCgRAGSRR366RTLC" width="100%" height="400px">
-            </div>
-            <div class="col-5">
-                <div class="card" style="width: 50%; height: 402px; opacity: 0.8; margin-top: -402px; border-radius: 0%;">
-                    <h1 style="padding-top: 230px; padding-left: 50px; color: #144FA0; font-size: 50px;"><b>Career</b></h1>
-                    <p style="padding-left: 50px; font-size: 20px;">Home</p>
-                </div>
-            </div>
-        </div>
-        </div>
+    <div class="row pb-5">
+      <div class="card" style="border-radius: 0%;">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9u1Y5H3q9HigL7lyvtvWu1RkkrE6tCtXJLCgRAGSRR366RTLC" width="100%" height="400px">
+
+      </div>
+      <div class="col">
+          <div class="card" style="width: 50%; height: 402px; opacity: 0.8; margin-top: -402px; border-radius: 0%;">
+              <h1 style="padding-top: 230px; padding-left: 50px; color: #144FA0; font-size: 50px;"><b>Career</b></h1>
+              <p style="padding-left: 50px; font-size: 20px;">Home</p>
+          </div>
+      </div>
+  </div>
         <div class="container">
     <h1 class="text-center bg" style="font-size: 50px;">Career at <b>VilvaTech</b></h1>
     <p class="text-center bg" style="font-size: 30px;">Roles and Responsibilities</p>
@@ -199,11 +198,10 @@
             <p class="bg"><b>Employment Type: </b> Full Time</p>
             <p class="bg"><b>Experience: </b> 0-2 Years (*Freshers also can apply)</p>
             <p class="bg"><b>Job Location: </b> Thanjavur</p>
-            <br>
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsesix" aria-expanded="false" aria-controls="flush-collapsesix style="color: #0A043C;"">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapsesix" aria-expanded="false" aria-controls="flush-collapsesix" style="color: #0A043C;">
                       <b>Responsibilities</b>
                     </button>
                   </h2>
@@ -217,22 +215,46 @@
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseTwo style="color: #0A043C;"">
-                      Accordion Item #2
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven" style="color: #0A043C;">
+                      <b>Learning & Development</b>
                     </button>
                   </h2>
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div id="flush-collapseseven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Attending skill-building workshops as mandated by the organization and achieving expected scores</div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree style="color: #0A043C;"">
-                      Accordion Item #3
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseeight" aria-expanded="false" aria-controls="flush-collapseeight" style="color: #0A043C;">
+                      <b>Skills</b>
                     </button>
                   </h2>
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                  <div id="flush-collapseeight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      <ul>
+                        <li>Results Driven</li>
+                        <li>Persistence</li>
+                        <li>Time Management</li>
+                        <li>Understanding customer needs</li>
+                        <li>Prospecting skills</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseeight" aria-expanded="false" aria-controls="flush-collapseeight" style="color: #0A043C;">
+                      <b>Motivation for Sales</b>
+                    </button>
+                  </h2>
+                  <div id="flush-collapseeight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                      <ul>
+                        <li>Handles Rejection</li>
+                        <li>Professionalism</li>
+                        <li>Communications</li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </div>
