--- a/olir/career.html
+++ b/olir/career.html
@@ -126,12 +126,12 @@
         </div>
 
         <!--form-->
-        <div class="container-fluid" style="background-color: #F1F6F9; padding: 80px;">
+        <div class="container-fluid" style="background-color: #F1F6F9; padding: 30px;">
             <h2 style=" text-align: center;"><b>Send Your Resume</b></h2>
             <h3 class="text-center">Explore Career Opportunities</h4>
             <br>
             <br>
-          <form class="need-validation">
+          <form class="need-validation row-cols-lg-auto align-items-center" style="max-width: 1200px; padding: 20px;">
             <div class="form-group mb-4" >
               <input type="text" class="form-control form-control-lg" id="exampleInputname1" placeholder="Name" required>
               <div class="invalid-feedback">
