--- a/shreem/product.html
+++ b/shreem/product.html
@@ -296,11 +296,11 @@
                   <label for="Textarea1">Your review*</label>
                   <textarea class="form-control form-control-lg" id="Textarea1" rows="4" ></textarea>
                 </div>
-                <div class="form-group mb-4" style="width: 300px;">
+                <div class="form-group mb-4 row-cols-lg-auto" style="width: 300px;">
                   <label for="name1">Name*</label>
                   <input type="text" class="form-control form-control-lg" id="name1">
                 </div>
-                <div class="form-group mb-4" style="width: 300px;">
+                <div class="form-group mb-4 row-cols-lg-auto" style="width: 300px;">
                   <label for="email1">Email*</label>
                   <input type="email" class="form-control form-control-lg" id="email1" aria-describedby="emailHelp">
                 </div>
