--- a/test/index.html
+++ b/test/index.html
@@ -8,8 +8,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" >
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <h2>Graphic designing</h2>
+    <h1 class="one">Hello, world!</h1>
+    <h2 class="two">Graphic designing</h2>
     <p>welcome to the world of technology</p>
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
@@ -49,7 +49,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn-alert" type="button">open</button>
+      <button class="btn bg" type="button">open</button>
       <button type="button" class="btn btn-primary">Primary</button>
     <script src="js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
